changes in the ui

--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="stylesheets/style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
 </head>
+
 <body>
-    <div class = "search">
-        <input type="text" class = "searchBar">
+    <div class="search">
+        <h1>Enter the Url in the SearchBox</h1>
+        <input type="text" class="searchBar">
     </div>
     <div class="websiteFrame">
-        <iframe src="https://www.google.com/search?igu=1" class = "frame" allowfullscreen = 'yes'></iframe>
+        <iframe src="https://www.google.com/search?igu=1" class="frame" allowfullscreen='yes'></iframe>
     </div>
-    
 
-    <script src = 'js/index.js'></script>
+
+    <script src='js/index.js'></script>
 </body>
+
 </html>
