--- a/public/invalid.html
+++ b/public/invalid.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phishing Warning</title>
     <link rel="stylesheet" href="stylesheets/invalid.css">
 </head>
+
 <body>
-    <div class="container">
-        <h1>Warning!</h1>
-        <p>The website you are trying to visit has been identified as a potential phishing website.</p>
-        <p>Proceed with caution and do not enter any personal or sensitive information.</p>
+    <div class="box-container">
+        <div class="box-item">
+            <div class="flip-box">
+                <div class="flip-box-front text-center"
+                    style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                    <div class="inner color-white">
+                        <h3 class="flip-box-header">Warning!</h3>
+                        <p>The website you are trying to visit has been identified as a potential phishing website.</p>
+                        <img src="https://s25.postimg.cc/65hsttv9b/cta-arrow.png" alt="" class="flip-box-img">
+                    </div>
+                </div>
+                <div class="flip-box-back text-center"
+                    style="background-image: url('https://s25.postimg.cc/frbd9towf/cta-2.png');">
+                    <div class="inner color-white">
+                        <h3 class="flip-box-header">Warning!</h3>
+                        <p>Proceed with caution and do not enter any personal or sensitive information.</p>
+                        <button class="flip-box-button">Learn More</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </div>
+    <!-- <div class="back">
+        <div class="container">
+            <h1>Warning!</h1>
+            <p>The website you are trying to visit has been identified as a potential phishing website.</p>
+            <p>Proceed with caution and do not enter any personal or sensitive information.</p>
+        </div>
+    </div> -->
+
 </body>
+
 </html>
