oh Lord please have mercy!

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
         <input type="text" class="searchBar">
     </div>
     <div class="websiteFrame">
-        <iframe src="https://www.google.com/search?igu=1" class="frame" allowfullscreen='yes'></iframe>
+        <iframe crossorigin= "anonymous" src="https://www.google.com/search?igu=1" class="frame" allowfullscreen='yes'></iframe>
     </div>
 
 
